Home Page Changes

--- a/fullstack-project/views/home.hbs
+++ b/fullstack-project/views/home.hbs
@@ -90,13 +90,13 @@
             <span class="service-icon">
               <i class="fas fa-phone-volume"></i>
             </span>
-            <h5 class="font-weight-bold text-uppercase">Art</h5>
+            <h5 class="font-weight-bold text-uppercase">Beautiful art</h5>
             <p class="text-muted text-capitalize">
-              Beautiful art
+              Helping independent creators
             </p>
           </div>
           <!-- end of single service -->
-          <!-- single service -->
+          {{!-- <!-- single service -->
           <div class="col-10 mx-auto col-md-6 col-lg-4 my-3">
             <span class="service-icon">
               <i class="fas fa-dollar-sign"></i>
@@ -106,7 +106,7 @@
               Art is universal
             </p>
           </div>
-          <!-- end of single service -->
+          <!-- end of single service --> --}}
         </div>
       </div>
     </section>
@@ -116,7 +116,7 @@
 <!--Carousel Wrapper-->
 <div id="multi-item-example" class="carousel slide carousel-multi-item" data-ride="carousel">
 
-  <!--Controls-->
+  {{!-- <!--Controls-->
   <div class="controls-top">
     <a class="btn-floating" href="#multi-item-example" data-slide="prev"><i class="fas fa-chevron-left"></i></a>
     <a class="btn-floating" href="#multi-item-example" data-slide="next"><i
@@ -130,7 +130,7 @@
     <li data-target="#multi-item-example" data-slide-to="1"></li>
     <li data-target="#multi-item-example" data-slide-to="2"></li>
   </ol>
-  <!--/.Indicators-->
+  <!--/.Indicators--> --}}
 
   <!--Slides-->
 
@@ -147,13 +147,12 @@
       <div class="col-md-4">
         <div class="card mb-2">
           <img class="card-img-top"
-            src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(34).jpg"
+            src="/images/Ethiopiacoffee2.jpg"
             alt="Card image cap">
           <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-              card's content.</p>
-            <a class="btn btn-primary text-white">Button</a>
+            <h4 class="card-title">Coffee from the heart of Ethiopia</h4>
+            <p class="card-text"><strong>Food & Drinks</strong>  </p>
+            {{!-- <a class="btn btn-primary text-white">Button</a> --}}
           </div>
         </div>
       </div>
@@ -161,13 +160,13 @@
       <div class="col-md-4">
         <div class="card mb-2">
           <img class="card-img-top"
-            src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(18).jpg"
+            src="/images/Epottery3.jpg"
             alt="Card image cap">
           <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-              card's content.</p>
-            <a class="btn btn-primary text-white">Button</a>
+            <h4 class="card-title">Ethiopian Wood Carved Bowl</h4>
+            <p class="card-text"><strong>Pottery</strong>  </p>
+
+            {{!-- <a class="btn btn-primary text-white">Button</a> --}}
           </div>
         </div>
       </div>
@@ -175,13 +174,13 @@
       <div class="col-md-4">
         <div class="card mb-2">
           <img class="card-img-top"
-            src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(35).jpg"
+            src="/images/Epaiting.jpg"
             alt="Card image cap">
           <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-              card's content.</p>
-            <a class="btn btn-primary text-white">Button</a>
+            <h4 class="card-title">Ethiopia Masks Art</h4>
+            <p class="card-text"><strong>Paintings</strong>  </p>
+
+            {{!-- <a class="btn btn-primary text-white">Button</a> --}}
           </div>
         </div>
       </div>
@@ -190,100 +189,12 @@
     </div>
     <!--/.First slide-->
 
-    <!--Second slide-->
-    <div class="carousel-item">
-      <ul class="list-group list-group-horizontal">
-
-      <div class="col-md-4">
-        <div class="card mb-2">
-          <img class="card-img-top"
-            src="https://mdbootstrap.com/img/Photos/Horizontal/City/4-col/img%20(60).jpg" alt="Card image cap">
-          <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-              card's content.</p>
-            <a class="btn btn-primary text-white">Button</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="card mb-2">
-          <img class="card-img-top"
-            src="https://mdbootstrap.com/img/Photos/Horizontal/City/4-col/img%20(47).jpg" alt="Card image cap">
-          <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-              card's content.</p>
-            <a class="btn btn-primary text-white">Button</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="card mb-2">
-          <img class="card-img-top"
-            src="https://mdbootstrap.com/img/Photos/Horizontal/City/4-col/img%20(48).jpg" alt="Card image cap">
-          <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-              card's content.</p>
-            <a class="btn btn-primary text-white">Button</a>
-          </div>
-        </div>
-      </div>
-    </ul>
-    </div>
-    <!--/.Second slide-->
-
-    <!--Third slide-->
-    <div class="carousel-item">
-      <ul class="list-group list-group-horizontal">
-
-      <div class="col-md-4">
-        <div class="card mb-2">
-          <img class="card-img-top"
-            src="https://mdbootstrap.com/img/Photos/Horizontal/Food/4-col/img%20(53).jpg" alt="Card image cap">
-          <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-              card's content.</p>
-            <a class="btn btn-primary text-white">Button</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="card mb-2">
-          <img class="card-img-top"
-            src="https://mdbootstrap.com/img/Photos/Horizontal/Food/4-col/img%20(45).jpg" alt="Card image cap">
-          <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-              card's content.</p>
-            <a class="btn btn-primary text-white">Button</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="card mb-2">
-          <img class="card-img-top"
-            src="https://mdbootstrap.com/img/Photos/Horizontal/Food/4-col/img%20(51).jpg" alt="Card image cap">
-          <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-              card's content.</p>
-            <a class="btn btn-primary text-white">Button</a>
-          </div>
-        </div>
-      </div>
-      </ul>
-    </div>
-    <!--/.Third slide-->
+    
 
   </div>
   <!--/.Slides-->
+
+  
 
 </div>
 <!--/.Carousel Wrapper-->
@@ -291,7 +202,7 @@
 <!--Carousel Wrapper-->
 <div id="multi-item-example" class="carousel slide carousel-multi-item" data-ride="carousel">
 
-  <!--Controls-->
+  {{!-- <!--Controls-->
   <div class="controls-top">
     <a class="btn-floating" href="#multi-item-example" data-slide="prev"><i class="fas fa-chevron-left"></i></a>
     <a class="btn-floating" href="#multi-item-example" data-slide="next"><i
@@ -305,7 +216,7 @@
     <li data-target="#multi-item-example" data-slide-to="1"></li>
     <li data-target="#multi-item-example" data-slide-to="2"></li>
   </ol>
-  <!--/.Indicators-->
+  <!--/.Indicators--> --}}
 
   <!--Slides-->
 
@@ -322,13 +233,13 @@
       <div class="col-md-4">
         <div class="card mb-2">
           <img class="card-img-top"
-            src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(34).jpg"
+            src="/images/Ppottery5.jpg"
             alt="Card image cap">
           <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-              card's content.</p>
-            <a class="btn btn-primary text-white">Button</a>
+            <h4 class="card-title">Bordalo Pinheiro Crockery</h4>
+            <p class="card-text"><strong>Pottery</strong>  </p>
+
+            {{!-- <a class="btn btn-primary text-white">Button</a> --}}
           </div>
         </div>
       </div>
@@ -336,13 +247,13 @@
       <div class="col-md-4">
         <div class="card mb-2">
           <img class="card-img-top"
-            src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(18).jpg"
+            src="/images/Ppaitings2.jpg"
             alt="Card image cap">
           <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-              card's content.</p>
-            <a class="btn btn-primary text-white">Button</a>
+            <h4 class="card-title">Amadeu Souza Cardoso</h4>
+            <p class="card-text"><strong>Paintings</strong>  </p>
+
+            {{!-- <a class="btn btn-primary text-white">Button</a> --}}
           </div>
         </div>
       </div>
@@ -350,13 +261,13 @@
       <div class="col-md-4">
         <div class="card mb-2">
           <img class="card-img-top"
-            src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(35).jpg"
+            src="/images/Pfood2.jpg"
             alt="Card image cap">
           <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-              card's content.</p>
-            <a class="btn btn-primary text-white">Button</a>
+            <h4 class="card-title">Custard Tart</h4>
+            <p class="card-text"><strong>Food & Drinks</strong>  </p>
+
+            {{!-- <a class="btn btn-primary text-white">Button</a> --}}
           </div>
         </div>
       </div>
@@ -365,97 +276,7 @@
     </div>
     <!--/.First slide-->
 
-    <!--Second slide-->
-    <div class="carousel-item">
-      <ul class="list-group list-group-horizontal">
-
-      <div class="col-md-4">
-        <div class="card mb-2">
-          <img class="card-img-top"
-            src="https://mdbootstrap.com/img/Photos/Horizontal/City/4-col/img%20(60).jpg" alt="Card image cap">
-          <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-              card's content.</p>
-            <a class="btn btn-primary text-white">Button</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="card mb-2">
-          <img class="card-img-top"
-            src="https://mdbootstrap.com/img/Photos/Horizontal/City/4-col/img%20(47).jpg" alt="Card image cap">
-          <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-              card's content.</p>
-            <a class="btn btn-primary text-white">Button</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="card mb-2">
-          <img class="card-img-top"
-            src="https://mdbootstrap.com/img/Photos/Horizontal/City/4-col/img%20(48).jpg" alt="Card image cap">
-          <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-              card's content.</p>
-            <a class="btn btn-primary text-white">Button</a>
-          </div>
-        </div>
-      </div>
-    </ul>
-    </div>
-    <!--/.Second slide-->
-
-    <!--Third slide-->
-    <div class="carousel-item">
-      <ul class="list-group list-group-horizontal">
-
-      <div class="col-md-4">
-        <div class="card mb-2">
-          <img class="card-img-top"
-            src="https://mdbootstrap.com/img/Photos/Horizontal/Food/4-col/img%20(53).jpg" alt="Card image cap">
-          <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-              card's content.</p>
-            <a class="btn btn-primary text-white">Button</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="card mb-2">
-          <img class="card-img-top"
-            src="https://mdbootstrap.com/img/Photos/Horizontal/Food/4-col/img%20(45).jpg" alt="Card image cap">
-          <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-              card's content.</p>
-            <a class="btn btn-primary text-white">Button</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="card mb-2">
-          <img class="card-img-top"
-            src="https://mdbootstrap.com/img/Photos/Horizontal/Food/4-col/img%20(51).jpg" alt="Card image cap">
-          <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-              card's content.</p>
-            <a class="btn btn-primary text-white">Button</a>
-          </div>
-        </div>
-      </div>
-      </ul>
-    </div>
-    <!--/.Third slide-->
+    
 
   </div>
   <!--/.Slides-->
@@ -475,14 +296,9 @@
               Artisan
             </h1>
             <div class="footer-icons my-5 d-flex justify-content-center">
-              <!-- single icon -->
-              <a href="#" class="footer-icon mx-2">
-                <i class="fab fa-facebook"></i>
-              </a>
-              
             </div>
             <!-- end footer icons -->
-            <p class="text-muted text-capitalize w-75 mx-auto text-white">
+            <p class="text-muted w-75 mx-auto text-white">
               There are millions of people selling the things they love.Here we are helping you to connect directly with makers to find something amazing.
             </p>
             <div
