--- a/fullstack-project/views/authentication/sellersignin.hbs
+++ b/fullstack-project/views/authentication/sellersignin.hbs
@@ -15,6 +15,7 @@
 </div>
 
 <div class="top-card-space">
+  
 <div class="card text-center" style="width: 22rem;" style="height: 500px;">
     <form method="POST" action="/sellersignin">
         <div class="card-body">
@@ -22,10 +23,16 @@
         <br>
             <label for="Email">Email</label>
             <input type="email" name="email" required placeholder="Email">
+            {{#if error}}
+            <span>{{this.error}}</span>
+            {{/if}}
         <br>
         <br>
             <label for="Password">Password</label>
             <input type="password" name="password" required placeholder="Password">
+            {{#if error}}
+            <span>{{this.error}}</span>
+            {{/if}}
         <br>
         <br>
             <button class="btn btn-outline-secondary btn-lg btn-block">Sign in</button>
