--- a/fullstack-project/views/sellerPage.hbs
+++ b/fullstack-project/views/sellerPage.hbs
@@ -9,6 +9,9 @@
        <li class="nav-item active">
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li> 
+       <li class="nav-item active">
+        <a class="nav-link" href="/product">Products <span class="sr-only">(current)</span></a>
+      </li> 
       <li class="nav-item active">
         <a class="nav-link" href="/seller-profile">Profile <span class="sr-only">(current)</span></a>
       </li>  
