--- a/fullstack-project/views/sellerProfile.hbs
+++ b/fullstack-project/views/sellerProfile.hbs
@@ -23,29 +23,26 @@
 <div class="container p-2 pb-5 m-10 pt-3 mt-5 pb-3">
     <h2><strong>Personal Information</strong></h2>
     <br><br>
-     <h4><strong>Name:</strong> {{buyer.name}}</h4>
-     <h4><strong>Email:</strong> {{buyer.email}}</h4>
+     <h4><strong>Name:</strong> {{seller.name}}</h4>
+     <h4><strong>Email:</strong> {{seller.email}}</h4>
 </div>
 
 <div class="container p-2 m-10">
-<form action="/buyer-profile" method="POST">
+<form action="/seller-profile" method="POST">
   <div class="form-group">
     <label for="name"><strong>Name</strong></label>
-    <input type="name" class="form-control" id="name" name="name" value="{{buyer.name}}">
+    <input type="name" class="form-control" id="name" name="name" value="{{seller.name}}">
   </div>
 
   <div class="form-group">
     <label for="email"><strong>Email</strong></label>
-    <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp" value="{{buyer.email}}">
+    <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp" value="{{seller.email}}">
   </div>
   <button class="btn btn-outline-primary btn-lg">Edit</button>
-  
+  {{!-- <button class="btn btn-outline-danger btn-lg">Delete account</button> --}}
 
-  {{!-- <a href="/buyer-profile/edit" class="btn btn-outline-primary btn-lg">Edit</a> --}}
+  {{!-- <a href="/seller-profile/edit" class="btn btn-outline-primary btn-lg">Edit</a> --}}
 
- <a href="/buyer-profile/delete" class="btn btn-outline-danger btn-lg">Delete account</a>
+  <a href="/seller-profile/delete" class="btn btn-outline-danger btn-lg">Delete account</a>
 </form>
 </div>
-
-{{!-- <button class="btn btn-outline-danger btn-lg">Delete account</button> --}}
- 
