Homepage finalized with all the images

--- a/fullstack-project/views/home.hbs
+++ b/fullstack-project/views/home.hbs
@@ -150,7 +150,7 @@
             src="/images/Ethiopiacoffee2.jpg"
             alt="Card image cap">
           <div class="card-body">
-            <h4 class="card-title">Coffee from the heart of Ethiopia</h4>
+            <h4 class="card-title"> Ethiopian Coffee Pot</h4>
             <p class="card-text"><strong>Food & Drinks</strong>  </p>
             {{!-- <a class="btn btn-primary text-white">Button</a> --}}
           </div>
@@ -160,11 +160,11 @@
       <div class="col-md-4">
         <div class="card mb-2">
           <img class="card-img-top"
-            src="/images/Epottery3.jpg"
+            src="/images/Eclothing1.5.jpg"
             alt="Card image cap">
           <div class="card-body">
-            <h4 class="card-title">Ethiopian Wood Carved Bowl</h4>
-            <p class="card-text"><strong>Pottery</strong>  </p>
+            <h4 class="card-title"> African Traditional Dress</h4>
+            <p class="card-text"><strong>Custom Clothing</strong>  </p>
 
             {{!-- <a class="btn btn-primary text-white">Button</a> --}}
           </div>
@@ -177,7 +177,7 @@
             src="/images/Epaiting.jpg"
             alt="Card image cap">
           <div class="card-body">
-            <h4 class="card-title">Ethiopia Masks Art</h4>
+            <h4 class="card-title">Ethiopian Masks Art</h4>
             <p class="card-text"><strong>Paintings</strong>  </p>
 
             {{!-- <a class="btn btn-primary text-white">Button</a> --}}
@@ -236,7 +236,7 @@
             src="/images/Ppottery5.jpg"
             alt="Card image cap">
           <div class="card-body">
-            <h4 class="card-title">Bordalo Pinheiro Crockery</h4>
+            <h4 class="card-title">Tea Crockery Set</h4>
             <p class="card-text"><strong>Pottery</strong>  </p>
 
             {{!-- <a class="btn btn-primary text-white">Button</a> --}}
@@ -250,7 +250,7 @@
             src="/images/Ppaitings2.jpg"
             alt="Card image cap">
           <div class="card-body">
-            <h4 class="card-title">Amadeu Souza Cardoso</h4>
+            <h4 class="card-title">Famous Paint of Portugal</h4>
             <p class="card-text"><strong>Paintings</strong>  </p>
 
             {{!-- <a class="btn btn-primary text-white">Button</a> --}}
@@ -295,7 +295,7 @@
             >
               Artisan
             </h1>
-            <div class="footer-icons my-5 d-flex justify-content-center">
+            <div class="footer-icons my-4 d-flex justify-content-center">
             </div>
             <!-- end footer icons -->
             <p class="text-muted w-75 mx-auto text-white">
