--- a/fullstack-project/views/home.hbs
+++ b/fullstack-project/views/home.hbs
@@ -22,8 +22,10 @@
         <a class="nav-link" href="/">Buyer sign out <span class="sr-only">(current)</span></a>
       </li> --}}
       {{!-- <li class="nav-item active"> --}}
-        
         <li class="nav-item active">
+        <a class="nav-link" href="/product">Products <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
         <a class="nav-link" href="/signin">Buyer sign in <span class="sr-only">(current)</span></a>
       </li>
       {{/if}}
@@ -92,7 +94,7 @@
             </span>
             <h5 class="font-weight-bold text-uppercase">Beautiful art</h5>
             <p class="text-muted text-capitalize">
-              Helping independent creators
+              We love art
             </p>
           </div>
           <!-- end of single service -->
@@ -149,9 +151,9 @@
           <img class="card-img-top"
             src="/images/Ethiopiacoffee2.jpg"
             alt="Card image cap">
-          <div class="card-body">
+          <div class="card-body text-center">
             <h4 class="card-title"> Ethiopian Coffee Pot</h4>
-            <p class="card-text"><strong>Food & Drinks</strong>  </p>
+            <p class="card-text"><strong>Food & Drink</strong>  </p>
             {{!-- <a class="btn btn-primary text-white">Button</a> --}}
           </div>
         </div>
@@ -162,8 +164,8 @@
           <img class="card-img-top"
             src="/images/Eclothing1.5.jpg"
             alt="Card image cap">
-          <div class="card-body">
-            <h4 class="card-title"> African Traditional Dress</h4>
+          <div class="card-body text-center">
+            <h4 class="card-title">Ghanaian Traditional Dress</h4>
             <p class="card-text"><strong>Custom Clothing</strong>  </p>
 
             {{!-- <a class="btn btn-primary text-white">Button</a> --}}
@@ -176,9 +178,9 @@
           <img class="card-img-top"
             src="/images/Epaiting.jpg"
             alt="Card image cap">
-          <div class="card-body">
+          <div class="card-body text-center">
             <h4 class="card-title">Ethiopian Masks Art</h4>
-            <p class="card-text"><strong>Paintings</strong>  </p>
+            <p class="card-text"><strong>Painting</strong>  </p>
 
             {{!-- <a class="btn btn-primary text-white">Button</a> --}}
           </div>
@@ -188,9 +190,6 @@
       </ul>
     </div>
     <!--/.First slide-->
-
-    
-
   </div>
   <!--/.Slides-->
 
@@ -235,7 +234,7 @@
           <img class="card-img-top"
             src="/images/Ppottery5.jpg"
             alt="Card image cap">
-          <div class="card-body">
+          <div class="card-body text-center">
             <h4 class="card-title">Tea Crockery Set</h4>
             <p class="card-text"><strong>Pottery</strong>  </p>
 
@@ -249,9 +248,9 @@
           <img class="card-img-top"
             src="/images/Ppaitings2.jpg"
             alt="Card image cap">
-          <div class="card-body">
+          <div class="card-body text-center">
             <h4 class="card-title">Famous Paint of Portugal</h4>
-            <p class="card-text"><strong>Paintings</strong>  </p>
+            <p class="card-text"><strong>Painting</strong>  </p>
 
             {{!-- <a class="btn btn-primary text-white">Button</a> --}}
           </div>
@@ -263,9 +262,9 @@
           <img class="card-img-top"
             src="/images/Pfood2.jpg"
             alt="Card image cap">
-          <div class="card-body">
+          <div class="card-body text-center">
             <h4 class="card-title">Custard Tart</h4>
-            <p class="card-text"><strong>Food & Drinks</strong>  </p>
+            <p class="card-text"><strong>Food & Drink</strong>  </p>
 
             {{!-- <a class="btn btn-primary text-white">Button</a> --}}
           </div>
@@ -299,7 +298,7 @@
             </div>
             <!-- end footer icons -->
             <p class="text-muted w-75 mx-auto text-white">
-              There are millions of people selling the things they love.Here we are helping you to connect directly with makers to find something amazing.
+              There are millions of people selling the things they love. Here we are helping you to connect directly with makers to find something amazing.
             </p>
             <div
               class="footer-contact mt-5 d-flex justify-content-around flex-wrap"
