--- a/fullstack-project/views/sellerProfile.hbs
+++ b/fullstack-project/views/sellerProfile.hbs
@@ -12,6 +12,9 @@
        <li class="nav-item active">
         <a class="nav-link" href="/product">Products <span class="sr-only">(current)</span></a>
       </li>
+       <li class="nav-item active">
+        <a class="nav-link" href="/sellerPage">My Product Page<span class="sr-only">(current)</span></a>
+      </li>
         <form action="/" method="POST">
         <button class="btn btn-dark">Sign out</button></form> 
     </ul>
@@ -24,7 +27,11 @@
     <h2><strong>Personal Information</strong></h2>
     <br><br>
      <h4><strong>Name:</strong> {{seller.name}}</h4>
+     <h4><strong>Postal Code:</strong> {{seller.postalcode}}</h4>
+     <h4><strong>City:</strong> {{seller.city}}</h4>
+     <h4><strong>Country:</strong> {{seller.country}}</h4>
      <h4><strong>Email:</strong> {{seller.email}}</h4>
+     <h4><strong>Phone Number:</strong> {{seller.phonenumber}}</h4>
 </div>
 
 <div class="container p-2 m-10">
@@ -33,16 +40,27 @@
     <label for="name"><strong>Name</strong></label>
     <input type="name" class="form-control" id="name" name="name" value="{{seller.name}}">
   </div>
-
+  <div class="form-group">
+    <label for="postalcode"><strong>Postal Code</strong></label>
+    <input type="postalcode" class="form-control" id="postalcode" name="postalcode" aria-describedby="emailHelp" value="{{seller.postalcode}}">
+  </div>
+  <div class="form-group">
+    <label for="city"><strong>City</strong></label>
+    <input type="city" class="form-control" id="city" name="city" aria-describedby="emailHelp" value="{{seller.city}}">
+  </div>
+  <div class="form-group">
+    <label for="country"><strong>Country</strong></label>
+    <input type="country" class="form-control" id="country" name="country" aria-describedby="emailHelp" value="{{seller.country}}">
+  </div>
   <div class="form-group">
     <label for="email"><strong>Email</strong></label>
     <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp" value="{{seller.email}}">
   </div>
+  <div class="form-group">
+    <label for="phonenumber"><strong>Phone Number</strong></label>
+    <input type="phonenumber" class="form-control" id="phonenumber" name="phonenumber" aria-describedby="emailHelp" value="{{seller.phonenumber}}">
+  </div>
   <button class="btn btn-outline-primary btn-lg">Edit</button>
-  {{!-- <button class="btn btn-outline-danger btn-lg">Delete account</button> --}}
-
-  {{!-- <a href="/seller-profile/edit" class="btn btn-outline-primary btn-lg">Edit</a> --}}
-
   <a href="/seller-profile/delete" class="btn btn-outline-danger btn-lg">Delete account</a>
 </form>
 </div>
