--- a/fullstack-project/views/temp.hbs
+++ b/fullstack-project/views/temp.hbs
@@ -7,3 +7,35 @@
     {{!-- <a href="#" class="btn btn-primary">Go somewhere</a> --}}
   {{!-- </div> --}}
 {{!-- </div> --}} --}}
+
+{{!-- <!-- Button trigger modal -->
+<div class="container  p-2 m-10">
+<button type="button" class="btn btn-outline-danger btn-lg" data-toggle="modal" data-target="#exampleModal">
+  Delete
+</button>
+</div>
+<a href=""></a>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Confirm delete</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Are you sure you want to delete your account?
+      </div>
+      <a class="modal-footer">
+        {{!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Yes</button> --}}
+        <button>
+        <a href="/buyer-profile/delete" data-dismiss="modal" class="btn btn-outline-danger btn-lg">Delete</a> 
+        </button>
+        <button href="/buyer-profile" type="button" class="btn btn-primary">No</button>
+      </div>
+    </div>
+  </div>
+</div> --}}
