Code review, fix minor bags, changed email content

--- a/fullstack-project/views/authentication/sellersignup.hbs
+++ b/fullstack-project/views/authentication/sellersignup.hbs
@@ -26,6 +26,9 @@
         <br>
             <label for="email">Email</label>
             <input type="email" name="email" required placeholder="Email">
+            {{#if error}}
+            <span>{{this.error}}</span>
+            {{/if}}
         <br>
          <br>
             <label for="city">City</label>
