--- a/fullstack-project/views/authentication/usersignup.hbs
+++ b/fullstack-project/views/authentication/usersignup.hbs
@@ -26,6 +26,9 @@
         <br>
             <label for="Email">Email</label>
             <input type="email" name="email" required placeholder="Email">
+            {{#if error}}
+            <span>{{this.error}}</span>
+            {{/if}}
         <br>
         <br>
             <label for="Password">Password</label>
