--- a/fullstack-project/views/orderSuccessful.hbs
+++ b/fullstack-project/views/orderSuccessful.hbs
@@ -24,4 +24,7 @@
 
 <div class="container p-5 m-5">
 <h1>Thank you for your order!</h1>
+<h4>Please check your email for contact information.</h4>
 </div>
+
+
