cutsom clothing changed to Custom

--- a/fullstack-project/views/editSellerProduct.hbs
+++ b/fullstack-project/views/editSellerProduct.hbs
@@ -32,7 +32,7 @@
   <div class="form-group">
     <label for="product-category">Product Category</label>
     <select class="form-control" id="product-category" name="productcategory" value="{{product.productcategory}}">
-      <option>Custom Clothing</option>
+      <option>Custom</option>
       <option>Food & Drink</option>
       <option>Painting</option>
       <option>Pottery</option> 
