--- a/fullstack-project/views/home.hbs
+++ b/fullstack-project/views/home.hbs
@@ -124,7 +124,7 @@
             alt="Card image cap">
           <div class="card-body text-center">
             <h4 class="card-title">Ghanaian Traditional Dress</h4>
-            <p class="card-text"><strong>Custom Clothing</strong>  </p>
+            <p class="card-text"><strong>Custom</strong>  </p>
 
             {{!-- <a class="btn btn-primary text-white">Button</a> --}}
           </div>
@@ -262,4 +262,4 @@
       
   <div class="footer-copyright text-center py-3">© 2019 Artisan
   </div>
-    </footer>
+  </footer>
