--- a/fullstack-project/views/product.hbs
+++ b/fullstack-project/views/product.hbs
@@ -31,7 +31,7 @@
 
 <div class="container text-center">
   <br>
- <a href="/products/ClothingCategory" class="btn btn-outline-dark buttoncategory">Custom Clothing</a> 
+ <a href="/products/CustomCategory" class="btn btn-outline-dark buttoncategory">Custom</a> 
  <a href="/products/FoodCategory" class="btn btn-outline-dark buttoncategory">Food & Drink</a> 
  <a href="/products/PaintingCategory" class="btn btn-outline-dark buttoncategory">Painting</a> 
  <a href="/products/PotteryCategory" class="btn btn-outline-dark buttoncategory">Pottery</a> 
