--- a/fullstack-project/public/styles/style.css
+++ b/fullstack-project/public/styles/style.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
+  font-family: "Verdana", Helvetica, Arial, sans-serif; 
+}
 
 a {
   color: #00b7ff; 
