--- a/fullstack-project/views/sellerPage.hbs
+++ b/fullstack-project/views/sellerPage.hbs
@@ -59,6 +59,10 @@
 </div>
 </div>
 
+<div class="container p-2 pt-3 m-10 mt-5 pb-3 text-center">
+    <h2><strong>My Products </strong></h2>
+</div>
+
 <div class="seller-products">
 {{#each images}}
 <div class="card text-center" style="width: 18rem;">
